--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ layout: default
       .Header 
       {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: x-large;
         border: 10px outset darkgray;
         background-color: black;
         color: whitesmoke;
@@ -21,13 +22,14 @@ layout: default
       .BodyL
       {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: larger;
         border: 5px outset darkgray;
         background-color: black;
         color: whitesmoke;
         text-align: center;
         padding: 40px;
-        width: 1840px;
-        height: 400px;
+        width: 1844px;
+        height: 320px;
         float: left;
       }
       .BodyR
@@ -56,10 +58,13 @@ layout: default
     <div class = "BodyL">
       <h1>RUN is a top-down stealth action game set in a dark yet familiar urban environment 
         that tasks the player with escaping from a mazelike warehouse full of dangers.
+        <br>
         Inspired by stealth classics of the past like Metal Gear Solid and Splinter Cell 
         we aim to deliver an immersive and thrilling expirience for the player as they explore 
-        a multitude of dark and decrepit environments on their route to safety.
-        
+        a multitude of dark and decrepit environments on their route to safety. 
+        <br><br>
+        The game tells the story of a man tricked by promises of a huge cash prize being abducted 
+        and attempting to escape from the twisted prison he finds himself in.
       </h1>
     </div>
     <div class = "BodyR">
@@ -76,7 +81,7 @@ layout: default
     width: 2534px;
     height: 500px;
     position: absolute;
-    top: 520px;">
+    top: 555px;">
       <h1></h1>
     </div>
 
@@ -91,7 +96,7 @@ layout: default
     top: 50%;
     left: 100px;">
       <img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" width="550" height="250">
-      <h1>A</h1> 
+      <h1>Dark, gritty and realistic environments</h1> 
     </div>
 
     <div style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -106,7 +111,7 @@ layout: default
     left: 50%;
     transform: translate(-50%, 0%);">
       <img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" width="550" height="250">
-      <h1>B</h1> 
+      <h1>Methodical, calculated sneaking gameplay</h1> 
     </div>
 
     <div style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -120,7 +125,7 @@ layout: default
     top: 50%;
     right: 100px;">
       <img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" width="550" height="250">
-      <h1>C</h1> 
+      <h1></h1> 
     </div>
     </section>
 
