--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@ layout: default
         float: right;
       }
 
+      .footer
+      {
+        position: absolute; 
+        bottom: 0px; left: 50%; 
+        transform: translate(-50%, 0%);
+      }
+
     </style>
   </head>
   <body>
@@ -74,7 +81,7 @@ layout: default
     
     <section>
     <div style = "font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    border: 5px solid darkgray;
+    border: 5px outset darkgray;
     background-color: black;
     color: whitesmoke;
     text-align: center;
@@ -89,6 +96,7 @@ layout: default
     border: 5px outset whitesmoke;
     background-color: black;
     color: whitesmoke;
+    font-size: larger;
     text-align: center;
     width: 550px;
     height: 250px;
@@ -103,6 +111,7 @@ layout: default
     border: 5px outset whitesmoke;
     background-color: black;
     color: whitesmoke;
+    font-size: larger;
     text-align: center;
     width: 550px;
     height: 250px;
@@ -118,6 +127,7 @@ layout: default
     border: 5px outset whitesmoke;
     background-color: black;
     color: whitesmoke;
+    font-size: larger;
     text-align: center;
     width: 550px;
     height: 250px;
@@ -125,12 +135,29 @@ layout: default
     top: 50%;
     right: 100px;">
       <img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" width="550" height="250">
-      <h1></h1> 
+      <h1>Dynamic, interactive environments</h1> 
     </div>
     </section>
 
+    <section>
+      <div style = "font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      border: 5px outset darkgray;
+      background-color: black;
+      color: whitesmoke;
+      font-size: large;
+      width: 2534px;
+      height: 206px;
+      position: absolute;
+      bottom: 10px">
+          <div class = footer style="bottom: 70px"> © Copyright 2023 – 2034 DBS Games, LLC</div>
+          <div class = footer style="bottom: 50px"> Contact us at: [email here]</div>
+          <div class = footer style="bottom: 30px"> Twitter: [@ here]</div>
+          <div class = footer style="bottom: 10px"> Instagram: [@ here]</div>
+      </div>
+    </section>
+
     <footer>
-      
+
     </footer>
   </body>
 </html>
