--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@ layout: default
       {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: x-large;
-        border: 10px outset darkgray;
-        background-color: black;
-        color: whitesmoke;
+        border: 10px solid rgb(130,255,254);
+        background-color: rgb(0, 0, 0);
+        color: rgb(178,156,255);
         text-align: center;
       }
       .BodyL
       {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: larger;
-        border: 5px outset darkgray;
-        background-color: black;
-        color: whitesmoke;
+        border: 5px solid rgb(130,255,254);
+        background-color: rgb(0, 0, 0);
+        color: rgb(178,156,255);
         text-align: center;
         padding: 40px;
         width: 1844px;
@@ -35,9 +35,9 @@ layout: default
       .BodyR
       {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        border: 5px outset darkgray;
-        background-color: black;
-        color: whitesmoke;
+        border: 5px solid rgb(130,255,254);
+        background-color: rgb(0, 0, 0);
+        color: rgb(178,156,255);
         text-align: center;
         width: 600px;
         height: 400px;
@@ -81,9 +81,9 @@ layout: default
     
     <section>
     <div style = "font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    border: 5px outset darkgray;
-    background-color: black;
-    color: whitesmoke;
+    border: 5px solid rgb(130,255,254);
+    background-color: rgb(0, 0, 0);
+    color: rgb(178,156,255);
     text-align: center;
     width: 2534px;
     height: 500px;
@@ -93,9 +93,9 @@ layout: default
     </div>
 
     <div style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    border: 5px outset whitesmoke;
-    background-color: black;
-    color: whitesmoke;
+    border: 5px solid rgb(130,255,254);
+    background-color: rgb(0, 0, 0);
+    color: rgb(178,156,255);
     font-size: larger;
     text-align: center;
     width: 550px;
@@ -108,9 +108,9 @@ layout: default
     </div>
 
     <div style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    border: 5px outset whitesmoke;
-    background-color: black;
-    color: whitesmoke;
+    border: 5px solid rgb(130,255,254);
+    background-color: rgb(0, 0, 0);
+    color: rgb(178,156,255);
     font-size: larger;
     text-align: center;
     width: 550px;
@@ -124,9 +124,9 @@ layout: default
     </div>
 
     <div style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    border: 5px outset whitesmoke;
-    background-color: black;
-    color: whitesmoke;
+    border: 5px solid rgb(130,255,254);
+    background-color: rgb(0, 0, 0);
+    color: rgb(178,156,255);
     font-size: larger;
     text-align: center;
     width: 550px;
@@ -141,9 +141,9 @@ layout: default
 
     <section>
       <div style = "font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      border: 5px outset darkgray;
-      background-color: black;
-      color: whitesmoke;
+      border: 5px solid rgb(130,255,254);
+      background-color: rgb(0, 0, 0);
+      color: rgb(178,156,255);
       font-size: large;
       width: 2534px;
       height: 206px;
