--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ layout: default
       </h1>
     </div>
     <div class = "BodyR">
-      <img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" width="600" height="400">
+      <img src="RUN Title Image.png" width="600" height="400">
     </div>
     </section>
     
@@ -103,7 +103,7 @@ layout: default
     position: absolute;
     top: 50%;
     left: 100px;">
-      <img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" width="550" height="250">
+      <img src="Image1.png" width="550" height="250">
       <h1>Dark, gritty and realistic environments</h1> 
     </div>
 
@@ -119,7 +119,7 @@ layout: default
     top: 50%;
     left: 50%;
     transform: translate(-50%, 0%);">
-      <img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" width="550" height="250">
+      <img src="Image2.png" width="550" height="250">
       <h1>Methodical, calculated sneaking gameplay</h1> 
     </div>
 
@@ -134,7 +134,7 @@ layout: default
     position: absolute;
     top: 50%;
     right: 100px;">
-      <img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" width="550" height="250">
+      <img src="Image3.png" width="550" height="250">
       <h1>Dynamic, interactive environments</h1> 
     </div>
     </section>
