--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ layout: default
       position: absolute;
       bottom: 10px">
           <div class = footer style="bottom: 70px"> © Copyright 2023 – 2034 DBS Games, LLC</div>
-          <div class = footer style="bottom: 50px"> Contact us at: [email here]</div>
+          <div class = footer style="bottom: 50px"> Contact us at: DBSgamesllc@gmail.com</div>
           <div class = footer style="bottom: 30px"> Twitter: [@ here]</div>
           <div class = footer style="bottom: 10px"> Instagram: [@ here]</div>
       </div>
